# PSET4

./: CMakeLists.txt  cmake_configure_log.txt  readme.md
client/: grpc_client.cpp  grpc_client.h  mainwindow.cpp  mainwindow.h
proto/: ocr.grpc.pb.cc  ocr.grpc.pb.h  ocr.pb.cc  ocr.pb.h  ocr.proto
server/: main.cpp  ocr_server.cpp  ocr_server.h  worker_pool.cpp  worker_pool.h
